--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -8,7 +8,7 @@
 resource_version <- "20231122-202015-77db2329"
 ```
 
-# Models for spatial structure
+# Models for areal spatial structure
 
 ## Comparison of AGHQ to NUTS {#aghq-nuts}
 
