--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -25,7 +25,7 @@ resource_version <- "20230811-095752-5b8181d8"
 
 #### `tmbstan` {#tmbstan-epil}
 
-(ref:tmbstan-epil) Figure caption.
+(ref:tmbstan-epil) Traceplots for the `tmbstan` parameters with the worst values of the potential scale reduction factor and effective sample size.
 
 ```{r tmbstan-epil, fig.cap="(ref:tmbstan-epil)"}
 knitr::include_graphics("figures/naomi-aghq/tmbstan-epil.png")
@@ -33,11 +33,15 @@ knitr::include_graphics("figures/naomi-aghq/tmbstan-epil.png")
 
 #### `rstan` {#rstan-epil}
 
-(ref:stan-epil) Figure caption.
+(ref:stan-epil) Traceplots for the `rstan` parameters with the worst values of the potential scale reduction factor and effective sample size.
 
 ```{r stan-epil, fig.cap="(ref:stan-epil)"}
 knitr::include_graphics("figures/naomi-aghq/stan-epil.png")
 ```
+
+## Loa loa example
+
+### NUTS convergence and suitability
 
 ## Simplified Naomi model description {#naomi-math}
 
@@ -188,7 +192,7 @@ No terms include $x'$, such that $\gamma_{x, x'}$ is only a function of $x$.
 
 ### Additional likelihood specification {#naomi-likelihood}
 
-Though Section \@ref(naomi) provides a complete description of Naomi's likelihood specification, additional useful details are provided here.
+Though Section \@ref(naomi) provides a complete description of Naomi's likelihood specification, any additional useful details are provided here.
 
 #### Household survey data
 
@@ -198,14 +202,6 @@ The generalised binomial $y \sim \text{xBin}(m, p)$ is defined for $y, m \in \ma
             &- \log \Gamma(m - y + 1) + y \log p + (m - y) \log(1 - p),
 \end{align}
 where the gamma function $\Gamma$ is such that $\forall n \in \mathbb{N}$, $\Gamma(n) = (n - 1)!$.
-
-#### ANC testing data
-
-Put any additional details here.
-
-#### ART attendence data
-
-Put any additional details here.
 
 ### Identifiability constraints {#naomi-identifiability}
 
