Add Loa loa Gaussian versus Laplace comparison figure

--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -938,6 +938,12 @@ The `gstat::krige` function [@pebesma2004gstat] was used to implement conditiona
 knitr::include_graphics("figures/naomi-aghq/conditional-simulation.png")
 ```
 
+(ref:loa-loa-mean-sd) Figure caption.
+
+```{r loa-loa-mean-sd, fig.cap="(ref:loa-loa-mean-sd)"}
+knitr::include_graphics("figures/naomi-aghq/loa-loa-mean-sd.png")
+```
+
 ## The Naomi model {#naomi}
 
 The work in this chapter was conducted in search of a fast and accurate Bayesian inference method for the Naomi model [@eaton2021naomi].
