Move templates into figures folder not resources

--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -8,17 +8,17 @@ resource_version <- "20230811-095752-5b8181d8"
 
 ### `TMB` C++ template {#tmb-epil}
 
-```{cpp, echo=TRUE, eval=FALSE, output.var="epil", code=readLines("resources/naomi-aghq/epil.cpp")}
+```{cpp, echo=TRUE, eval=FALSE, output.var="epil", code=readLines("figures/naomi-aghq/TMB/epil.cpp")}
 ```
 
 ### Modified `TMB` C++ template {#tmb-modified-epil}
 
-```{cpp, echo=TRUE, eval=FALSE, output.var="epil", code=readLines("resources/naomi-aghq/epil_modified.cpp")}
+```{cpp, echo=TRUE, eval=FALSE, output.var="epil", code=readLines("figures/naomi-aghq/TMB/epil_modified.cpp")}
 ```
 
 ### `Stan` C++ template {#stan-epil}
 
-```{cpp, echo=TRUE, eval=FALSE, output.var="epil", code=readLines("resources/naomi-aghq/epil.stan")}
+```{cpp, echo=TRUE, eval=FALSE, output.var="epil", code=readLines("figures/naomi-aghq/epil.stan")}
 ```
 
 ### NUTS convergence and suitability
