Difference between Laplace and Gaussian on map

--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -932,10 +932,16 @@ Table: (\#tab:loaloa-approaches) The inference methods and software considered.
 
 The `gstat::krige` function [@pebesma2004gstat] was used to implement conditional Gaussian field simulation [@sds; Chapter 12] passing in random effect and hyperparameter samples to create each simulation (Figure \@ref(fig:conditional-simulation)).
 
-(ref:conditional-simulation) Posterior mean of the suitability $\mathbb{E}[\phi(s)]$ (Panel A) and prevalence $\mathbb{E}[\rho(s)]$ (Panel B) random fields.
+(ref:conditional-simulation-adam-fixed) Posterior mean of the suitability $\mathbb{E}[\phi(s)]$ (Panel A) and prevalence $\mathbb{E}[\rho(s)]$ (Panel B) random fields.
 
-```{r conditional-simulation, fig.cap="(ref:conditional-simulation)"}
-knitr::include_graphics("figures/naomi-aghq/conditional-simulation.png")
+```{r conditional-simulation-adam-fixed, fig.cap="(ref:conditional-simulation-adam-fixed)"}
+knitr::include_graphics("figures/naomi-aghq/conditional-simulation-adam-fixed.png")
+```
+
+(ref:conditional-simulation-diff-fixed) Figure caption.
+
+```{r conditional-simulation-diff-fixed, fig.cap="(ref:conditional-simulation-diff-fixed)"}
+knitr::include_graphics("figures/naomi-aghq/conditional-simulation-diff-fixed.png")
 ```
 
 (ref:loa-loa-mean-sd) Figure caption.
