--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -25,7 +25,7 @@ resource_version <- "20230811-095752-5b8181d8"
 
 #### `tmbstan` {#tmbstan-epil}
 
-(ref:tmbstan-epil) Traceplots for the `tmbstan` parameters with the worst values of the potential scale reduction factor and effective sample size.
+(ref:tmbstan-epil) Traceplots for the `tmbstan` parameters with the worst effective sample size $\text{ESS}$ and potential scale reduction factor $\hat R$. These were `l_tau_nu` ($\text{ESS} = 377$) and `beta[3]` ($\hat R = 1.006$).
 
 ```{r tmbstan-epil, fig.cap="(ref:tmbstan-epil)"}
 knitr::include_graphics("figures/naomi-aghq/tmbstan-epil.png")
@@ -33,7 +33,7 @@ knitr::include_graphics("figures/naomi-aghq/tmbstan-epil.png")
 
 #### `rstan` {#rstan-epil}
 
-(ref:stan-epil) Traceplots for the `rstan` parameters with the worst values of the potential scale reduction factor and effective sample size.
+(ref:stan-epil) Traceplots for the `rstan` parameters with the worst effective sample size $\text{ESS}$ and potential scale reduction factor $\hat R$. These were `tau_nu` ($\text{ESS} = 437$) and `tau_nu` ($\hat R = 1.009$). Rather than plotting the traceplot for `tau_nu` twice, the parameter `epsilon[18]` is included, which had the second highest $\hat R$ of 1.008.
 
 ```{r stan-epil, fig.cap="(ref:stan-epil)"}
 knitr::include_graphics("figures/naomi-aghq/stan-epil.png")
