--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -817,7 +817,7 @@ It is inefficient to run `MakeADFun` from scratch for each $i$, when only one da
 obj_i$env$data$i <- i
 ```
 
-Although this approach would be more efficient, if else statements on updateable data items (as used in `epil_modified.cpp`) are not supported, so this is not yet possible.
+Although this approach would be more efficient, if else statements on data items which can be updated (as used in `epil_modified.cpp`) are not supported, so this is not yet possible.
 
 #### Laplace marginals and AGHQ with `TMB` {#epil-laplace-aghq-tmb}
 
