--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -2,6 +2,7 @@ Thank you to my supervisors Seth Flaxman and Jeff Eaton for their guidance and m
 I am grateful for the research environment provided by the Modern Statistics and Statistical Machine Learning Centre for Doctoral Training at Imperial and Oxford and the Machine Learning and Global Health Network.
 Thanks to the HIV Inference Group at Imperial for tolerating a mathematician, and helping me learn to present my research.
 Thank you to Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to the MIT Media Lab.
+Stand-up meetings and Google documents.
 <!-- Boston: Lenni, Lenny, Simon, Janika, Geetha, Frances, Leilani, Tammy. -->
 Thank you to Alex Stringer, and the Department of Statistics and Actuarial Science for hosting my visit to the University of Waterloo.
 Without Alex, Chapter \@ref(naomi-aghq) would never have gotten anywhere.
