--- a/references.bib
+++ b/references.bib
@@ -2460,3 +2460,11 @@
   year={2003},
   publisher={MIT; 1998}
 }
+
+@article{margossian2023many,
+  title={For how many iterations should we run Markov chain Monte Carlo?},
+  author={Margossian, Charles C and Gelman, Andrew},
+  journal={arXiv preprint arXiv:2311.02726},
+  year={2023}
+}
+
